# huggingface-ai-trainer

./: README.md  pyproject.toml
scripts/: sync_chat_templates.py
src/autotrain/: __init__.py  data_utils.py  project.py
src/autotrain/app/: models.py.bak
src/autotrain/backends/: spaces.py
src/autotrain/cli/: run_llm.py
src/autotrain/cli/tui/: app.py.backup
src/autotrain/preprocessor/: chat_templates_standalone.py  llm.py
src/autotrain/rendering/: __init__.py  message_renderer.py  utils.py
src/autotrain/trainers/: common.py
src/autotrain/trainers/clm/: __main__.py  params.py  sweep_utils.py  train_clm_grpo.py  train_clm_sft.py  utils.py
src/autotrain/trainers/extractive_question_answering/: __main__.py
src/autotrain/trainers/generic/: utils.py
src/autotrain/trainers/image_classification/: __main__.py
src/autotrain/trainers/image_regression/: __main__.py
src/autotrain/trainers/object_detection/: __main__.py
src/autotrain/trainers/sent_transformers/: __main__.py
src/autotrain/trainers/seq2seq/: __main__.py
src/autotrain/trainers/tabular/: __main__.py
src/autotrain/trainers/text_classification/: __main__.py
src/autotrain/trainers/text_regression/: __main__.py
src/autotrain/trainers/token_classification/: __main__.py
src/autotrain/trainers/vlm/: utils.py
src/autotrain/utils/: __init__.py
tests/: test_apply_chat_template_flag.py  test_cli_integration.py  test_grpo_trainer.py  test_message_rendering.py  test_path_normalization.py  test_repo_conflict.py  test_response_only_training.py  test_sweep.py
tests/cli/: test_chat_template_defaults.py  test_cli_field_scopes.py  test_cli_parameter_parsing.py
tests/trainers/: test_clm_utils.py
